added api endpoint
