# app/Http/Resources/PlaceRateSettingsResource.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class PlaceRateSettingsResource extends JsonResource
+{
+    /**
+     * Transform the resource collection into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
+     */
+    public function toArray($request)
+    {
+        return [
+			'questions' => $this->resource->get('questions', []),
+			'country_responsibles' => $this->resource->get(
+				'country_responsibles', 
+				[]
+			)
+		];
+    }
+}
